# LLMDashboard

./: .gitignore  claude.md  start.sh
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  mcp_config.py  request_log.py
backend/app/routers/: analytics.py  logs.py  mcp.py  proxy.py
backend/app/schemas/: analytics.py  mcp_config.py  proxy.py  request_log.py
backend/app/services/: analytics_service.py  cost_service.py  proxy_service.py
backend/app/services/providers/: anthropic_provider.py  azure_provider.py  base.py  gemini_provider.py  openai_provider.py
backend/app/utils/: domain_extractor.py  key_masker.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: analytics.ts  client.ts  logs.ts  mcp.ts
frontend/src/components/analytics/: BreakdownBarChart.tsx  MetricCard.tsx  TimeSeriesChart.tsx
frontend/src/components/layout/: AppShell.tsx  Sidebar.tsx  Topbar.tsx
frontend/src/components/mcp/: MCPServerCard.tsx  MCPServerForm.tsx
frontend/src/hooks/: useAnalytics.ts  useLogs.ts  useMCP.ts
frontend/src/lib/: formatters.ts
frontend/src/pages/: AnalyticsPage.tsx  LogsPage.tsx  MCPPage.tsx
frontend/src/types/: analytics.ts  log.ts  mcp.ts
